force-app/main/default/objects/Enrollment__c/Enrollment__c.object-meta.xml
<CustomObject>
    <description>Program enrollment details and related patient coverage.</description>
    <label>Enrollment</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Enrollment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>