force-app/main/default/objects/Enrollment__c/fields/Care_Journey__c.field-meta.xml
<CustomField>
    <fullName>Care_Journey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Journey</label>
    <referenceTo>Care_Journey__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>EnrollmentCareJourney</relationshipName>
    <type>Lookup</type>
</CustomField>