force-app/main/default/objects/Enrollment__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End</label>
    <type>Date</type>
</CustomField>