force-app/main/default/objects/Enrollment__c/fields/Handoff_Error__c.field-meta.xml
<CustomField>
    <fullName>Handoff_Error__c</fullName>
    <label>Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>