force-app/main/default/objects/Enrollment__c/fields/Outcome_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Review_Date__c</fullName>
    <formula>Start_Date__c + 80</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outcome Review Date</label>
    <type>Date</type>
</CustomField>