force-app/main/default/objects/Enrollment__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>EnrollmentPatient</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>