force-app/main/default/objects/Enrollment__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Program</relationshipName>
    <type>Lookup</type>
</CustomField>