force-app/main/default/objects/Enrollment__c/fields/Sensor_Live_At__c.field-meta.xml
<CustomField>
    <fullName>Sensor_Live_At__c</fullName>
    <label>Sensor Live</label>
    <type>DateTime</type>
</CustomField>